--- a/prices.html
+++ b/prices.html
@@ -72,7 +72,7 @@
                   </div>
                   <div class="col-sm-6 col-xs-12 col-md-6">
                       <div class="social top-number">
-                        <p><i class="fa"></i>г. Ярославль, ул. Магистральная, д. 14</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Гагарина, д. 62</p>
                       </div>
                   </div>
               </div>
@@ -128,7 +128,7 @@
                     <td>4,5</td>
                     <td>ст. 10-20</td>
                     <td>28 500</td>
-                    <td>Новая</td>
+                    <td>лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
@@ -138,7 +138,7 @@
                     <td>6</td>
                     <td>ст. 20</td>
                     <td>25 000</td>
-                    <td>Вода</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
@@ -149,7 +149,7 @@
                     <td>5</td>
                     <td>ст. 10-20</td>
                     <td>25 000</td>
-                    <td>Вода</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/159.jpg" alt="">
                         <div class="overlay">
@@ -166,7 +166,7 @@
                     <td>5</td>
                     <td>ст. 10-20</td>
                     <td>25 000</td>
-                    <td>Вода</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/219.jpg" alt="">
                         <div class="overlay">
@@ -200,7 +200,7 @@
                     <td>6</td>
                     <td>ст. 10-20</td>
                     <td>28 000</td>
-                    <td>Лежалая</td>
+                    <td>Лежалая,б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/273.jpg" alt="">
                         <div class="overlay">
@@ -213,11 +213,28 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>325</td>
-                    <td>4,5; 5</td>
+                    <td>159</td>
+                    <td>4,5,6,7</td>
                     <td>ст. 10-20</td>
                     <td>25 500</td>
-                    <td>Вода</td>
+                    <td>пар</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
+                        <div class="overlay">
+                            <div class="recent-work-inner">
+                                <a class="preview" href="images/photos/full/326.jpg" rel="prettyPhoto">
+                                  <i class="fa fa-eye"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>219</td>
+                    <td>6; 7; 8; 10</td>
+                    <td>ст. 10-20</td>
+                    <td>28 000</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
                         <div class="overlay">
@@ -231,23 +248,6 @@
                   </tr>
                   <tr>
                     <td>325</td>
-                    <td>6; 7; 8; 10</td>
-                    <td>ст. 10-20</td>
-                    <td>23 500</td>
-                    <td>Вода</td>
-                    <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/326.jpg" rel="prettyPhoto">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>377</td>
                     <td>8</td>
                     <td>ст. 10-20</td>
                     <td>25 000</td>
@@ -261,7 +261,7 @@
                     <td>7; 8</td>
                     <td>ст. 10-20</td>
                     <td>25 000</td>
-                    <td>Лежалая</td>
+                    <td>пар,лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/426.jpg" alt="">
                         <div class="overlay">
@@ -274,11 +274,11 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>530</td>
-                    <td>9</td>
+                    <td>426</td>
+                    <td>7,8,9</td>
                     <td>ст. 10-20</td>
                     <td>17 000</td>
-                    <td>Нефть</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/530.jpg" alt="">
                         <div class="overlay">
@@ -291,11 +291,11 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>630</td>
-                    <td>7</td>
+                    <td>530</td>
+                    <td>7,9</td>
                     <td>ст. 10-20</td>
                     <td>25 000</td>
-                    <td>Вода</td>
+                    <td>пар,лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/630.jpg" alt="">
                         <div class="overlay">
@@ -308,7 +308,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>720</td>
+                    <td>630</td>
                     <td>8</td>
                     <td>ст. 10-20, 17Г1С</td>
                     <td>23 000</td>
@@ -318,7 +318,7 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>820</td>
+                    <td>720</td>
                     <td>8; 9</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>23 000</td>
@@ -335,11 +335,11 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>920</td>
+                    <td>820</td>
                     <td>8; 10</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td></td>
-                    <td>По заказ</td>
+                    <td>лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
@@ -349,7 +349,7 @@
                     <td>10; 12</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>21 500</td>
-                    <td>Нефть</td>
+                    <td>Нефть,лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1020.jpg" alt="">
                         <div class="overlay">
@@ -366,7 +366,7 @@
                     <td>8; 9</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>21 500</td>
-                    <td>Вода, газ</td>
+                    <td>лежалая, газ</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1220.jpg" alt="">
                         <div class="overlay">
@@ -384,7 +384,7 @@
                     <td>12; 15,7</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>25 000</td>
-                    <td>Вода, газ</td>
+                    <td>лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1420.jpg" alt="">
                         <div class="overlay">
