--- a/prices.html
+++ b/prices.html
@@ -96,7 +96,7 @@
         <div class="container">
            <div class="center">
                 <h2>Ассортимент и цены</h2>
-                <p class="lead">Цены указаны для розничных продаж.<br>Для крупных партий у нас предусмотрена система скидок.<br>Подробности уточняйте по телефону.</p>
+                <p class="lead">Цены могут менятся уточняйте.<br>Для указаны рознечной торговли .<br>Подробности уточняйте по телефону.</p>
                 <!--
                 <p class="lead"><a class="btn-primary" href="assets/prices.xlsx">Скачать прайс-лист</a></p>
               -->
@@ -134,6 +134,15 @@
                     </td>
                   </tr>
                   <tr>
+                      <td>108</td>
+                    <td>6</td>
+                    <td>ст. 20</td>
+                    <td>28 000</td>
+                    <td>лежалая</td>
+                    <td class="recent-work-wrap">
+                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                    </td>
+                  </tr>
                     <td>133</td>
                     <td>6</td>
                     <td>ст. 20</td>
