--- a/prices.html
+++ b/prices.html
@@ -96,7 +96,7 @@
         <div class="container">
            <div class="center">
                 <h2>Ассортимент и цены</h2>
-                <p class="lead">Цены могут менятся уточняйте.<br>Для указаны рознечной торговли .<br>Подробности уточняйте по телефону.</p>
+                <p class="lead">Цены могут менятся уточняйте.<br>Цены указаны для рознечной торговли .<br>Подробности уточняйте по телефону.</p>
                 <!--
                 <p class="lead"><a class="btn-primary" href="assets/prices.xlsx">Скачать прайс-лист</a></p>
               -->
@@ -117,39 +117,10 @@
                     <td>73</td>
                     <td>5,5</td>
                     <td>ст. 10-20</td>
-                    <td>25 000</td>
+                    <td>23 000</td>
                     <td>Некондиция</td>
                     <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>114</td>
-                    <td>4,5</td>
-                    <td>ст. 10-20</td>
-                    <td>28 500</td>
-                    <td>лежалая</td>
-                    <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
-                    </td>
-                  </tr>
-                  <tr>
-                      <td>108</td>
-                    <td>6</td>
-                    <td>ст. 20</td>
-                    <td>28 000</td>
-                    <td>лежалая</td>
-                    <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
-                    </td>
-                  </tr>
-                    <td>133</td>
-                    <td>6</td>
-                    <td>ст. 20</td>
-                    <td>25 000</td>
-                    <td>пар</td>
-                    <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/nopic.jpg" alt="">
+                        <img class="img-responsive" src="images/nopic.jpg" alt=""> 
                     </td>
                   </tr>
                   <!-- Копировать отсюда -->
@@ -157,7 +128,7 @@
                     <td>159</td>
                     <td>5</td>
                     <td>ст. 10-20</td>
-                    <td>25 000</td>
+                    <td>27 000</td>
                     <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/159.jpg" alt="">
@@ -172,27 +143,10 @@
                   </tr>
                   <tr>
                     <td>219</td>
-                    <td>5</td>
-                    <td>ст. 10-20</td>
-                    <td>25 000</td>
-                    <td>пар</td>
-                    <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/219.jpg" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/219.jpg" rel="prettyPhoto">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td>219</td>
                     <td>6; 7; 8</td>
                     <td>ст. 10-20</td>
                     <td>28 000</td>
-                    <td>Лежалая</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/219.jpg" alt="">
                         <div class="overlay">
@@ -209,7 +163,7 @@
                     <td>6</td>
                     <td>ст. 10-20</td>
                     <td>28 000</td>
-                    <td>Лежалая,б/у</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/273.jpg" alt="">
                         <div class="overlay">
@@ -260,17 +214,17 @@
                     <td>8</td>
                     <td>ст. 10-20</td>
                     <td>25 000</td>
-                    <td>Лежалая</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
                   </tr>
                   <tr>
                     <td>426</td>
-                    <td>7; 8</td>
+                    <td>7,8,9</td>
                     <td>ст. 10-20</td>
-                    <td>25 000</td>
-                    <td>пар,лежалая</td>
+                    <td>27 000</td>
+                    <td>пар</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/426.jpg" alt="">
                         <div class="overlay">
@@ -283,28 +237,11 @@
                     </td>
                   </tr>
                   <tr>
-                    <td>426</td>
-                    <td>7,8,9</td>
-                    <td>ст. 10-20</td>
-                    <td>17 000</td>
-                    <td>пар</td>
-                    <td class="recent-work-wrap">
-                        <img class="img-responsive" src="images/photos/small/530.jpg" alt="">
-                        <div class="overlay">
-                            <div class="recent-work-inner">
-                                <a class="preview" href="images/photos/full/530.jpg" rel="prettyPhoto">
-                                  <i class="fa fa-eye"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </td>
-                  </tr>
-                  <tr>
                     <td>530</td>
                     <td>7,9</td>
                     <td>ст. 10-20</td>
-                    <td>25 000</td>
-                    <td>пар,лежалая</td>
+                    <td>24 000</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/630.jpg" alt="">
                         <div class="overlay">
@@ -320,7 +257,7 @@
                     <td>630</td>
                     <td>8</td>
                     <td>ст. 10-20, 17Г1С</td>
-                    <td>23 000</td>
+                    <td>28 000</td>
                     <td>Нефть</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
@@ -347,7 +284,7 @@
                     <td>820</td>
                     <td>8; 10</td>
                     <td>ст. 10-20б 17Г1С</td>
-                    <td></td>
+                    <td>21 000</td>
                     <td>лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
@@ -375,7 +312,7 @@
                     <td>8; 9</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>21 500</td>
-                    <td>лежалая, газ</td>
+                    <td>нефть</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1220.jpg" alt="">
                         <div class="overlay">
@@ -392,7 +329,7 @@
                     <td>1420</td>
                     <td>12; 15,7</td>
                     <td>ст. 10-20б 17Г1С</td>
-                    <td>25 000</td>
+                    <td>23 000</td>
                     <td>лежалая</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1420.jpg" alt="">
