--- a/prices.html
+++ b/prices.html
@@ -96,7 +96,7 @@
         <div class="container">
            <div class="center">
                 <h2>Ассортимент и цены</h2>
-                <p class="lead">Цены могут менятся уточняйте.<br>Цены указаны для рознечной торговли .<br>Подробности уточняйте по телефону.</p>
+                <p class="lead">Цены могут меняться уточняйте.<br>Цены указаны для розничной торговли .<br>Подробности уточняйте по телефону.</p>
                 <!--
                 <p class="lead"><a class="btn-primary" href="assets/prices.xlsx">Скачать прайс-лист</a></p>
               -->
@@ -129,7 +129,7 @@
                     <td>5</td>
                     <td>ст. 10-20</td>
                     <td>27 000</td>
-                    <td>пар</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/159.jpg" alt="">
                         <div class="overlay">
@@ -146,7 +146,7 @@
                     <td>6; 7; 8</td>
                     <td>ст. 10-20</td>
                     <td>28 000</td>
-                    <td>пар</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/219.jpg" alt="">
                         <div class="overlay">
@@ -180,7 +180,7 @@
                     <td>4,5,6,7</td>
                     <td>ст. 10-20</td>
                     <td>25 500</td>
-                    <td>пар</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
                         <div class="overlay">
@@ -197,7 +197,7 @@
                     <td>6; 7; 8; 10</td>
                     <td>ст. 10-20</td>
                     <td>28 000</td>
-                    <td>пар</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/326.jpg" alt="">
                         <div class="overlay">
@@ -224,7 +224,7 @@
                     <td>7,8,9</td>
                     <td>ст. 10-20</td>
                     <td>27 000</td>
-                    <td>пар</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/426.jpg" alt="">
                         <div class="overlay">
@@ -258,7 +258,7 @@
                     <td>8</td>
                     <td>ст. 10-20, 17Г1С</td>
                     <td>28 000</td>
-                    <td>Нефть</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
@@ -268,7 +268,7 @@
                     <td>8; 9</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>23 000</td>
-                    <td>Нефть</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/820.jpg" alt="">
                         <div class="overlay">
@@ -285,7 +285,7 @@
                     <td>8; 10</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>21 000</td>
-                    <td>лежалая</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/nopic.jpg" alt="">
                     </td>
@@ -295,7 +295,7 @@
                     <td>10; 12</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>21 500</td>
-                    <td>Нефть,лежалая</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1020.jpg" alt="">
                         <div class="overlay">
@@ -312,7 +312,7 @@
                     <td>8; 9</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>21 500</td>
-                    <td>нефть</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1220.jpg" alt="">
                         <div class="overlay">
@@ -330,7 +330,7 @@
                     <td>12; 15,7</td>
                     <td>ст. 10-20б 17Г1С</td>
                     <td>23 000</td>
-                    <td>лежалая</td>
+                    <td>б/у</td>
                     <td class="recent-work-wrap">
                         <img class="img-responsive" src="images/photos/small/1420.jpg" alt="">
                         <div class="overlay">
