--- a/prices.html
+++ b/prices.html
@@ -96,7 +96,7 @@
         <div class="container">
            <div class="center">
                 <h2>Ассортимент и цены</h2>
-                <p class="lead">Цены могут меняться уточняйте.<br>Цены указаны для розничной торговли .<br>Подробности уточняйте по телефону.</p>
+                <p class="lead">Оптовые поставки обсуждаются отдельно.</p>
                 <!--
                 <p class="lead"><a class="btn-primary" href="assets/prices.xlsx">Скачать прайс-лист</a></p>
               -->
@@ -109,7 +109,7 @@
                     <td><h3><span>Диаметр, мм</span></h3></td>
                     <td><h3><span>Стенка, мм</span></h3></td>
                     <td><h3><span>Марка стали</span></h3></td>
-                    <td><h3><span>Цена за тонну, руб</span></h3></td>
+                    <td><h3><span>Розничная цена за тонну, руб</span></h3></td>
                     <td><h3><span>Примечание</span></h3></td>
                     <td><h3><span>Фото</span></h3></td>
                   </tr>
