Changed main image and fixed layout

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="item active" style="background-image: url(images/tubes.jpg)">
                     <div class="container">
                         <div class="row slide-margin">
-                            <div class="col-sm-6">
+                            <div class="col-sm-6 float-right">
                                 <div class="carousel-content">
                                     <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
                                     <h2 class="animation animated-item-2">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
@@ -137,6 +137,7 @@
     </section>
 
 
+   <section id="main-details">
            <div class="row">
              <div class="features">
                <div class="col-md-6 col-sm-8 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
