--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                  до исчерпания ресурса использования. Благодаря этому многие
                  потребители могут существенно сэкономить, отказывшись от
                  использования новых труб в пользу б/у. Значительная часть б/у
-		       труб <i><b>ничем не уступает новым</b></i>, но стоит заметно дешевле.
+		       труб <b><i>ничем не уступает новым</i></b>, но стоит заметно дешевле.
                  Конечно, не для всех видов работ подходит б/у труба, но
                  правильно подобранная замена от хорошего поставщика во многих
                  случаях способна сильно снизить ваши затраты.</h3>
