Changed contact email

--- a/contact-us.html
+++ b/contact-us.html
@@ -161,7 +161,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2016—2018 <a href="mailto:mail@yar-truba.ru" title="Обратная связь">Обратная связь</a>. GPLv3.
+                    &copy; 2016—2018 <a href="mailto:yartruba-76@yandex.ru" title="Обратная связь">Обратная связь</a>. GPLv3.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
