--- a/contact-us.html
+++ b/contact-us.html
@@ -105,10 +105,13 @@
                     <div class="col-sm-7 map-content">
                         <ul class="row">
                             <li class="col-sm-6">
-                              <h3 style="margin-top: 0">Телефоны</h3>
+                              <h3 style="margin-top: 0">Офис</h3>
+                              <h5>Телефоны</h5>
                               <h5>+7(4852) 68-20-41</h5>
-                              <h5>+7(4852) 68-20-51</h5>
-                              <h3>Адреса</h3>
+                              <h5>+7(4852) 68-20-41</h5>
+                              <h5 style="margin-top: 10px">Адрес</h5>
+                              <h5>г. Ярославль, ул. Гагарина, д. 62</h5>
+                              <h3>Адреса складов</h3>
                               <h5>г. Ярославль, ул. Гагарина, д. 62</h5>
                               <h5>г. Ярославль, Тормозное шоссе, д. 119</h5>
                               <h3>Электронная почта</h3>
