--- a/about.html
+++ b/about.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Покупка, продажа и демонтаж б/у труб">
+    <meta name="description" content="Покупка, продажа и демонтаж б/у труб в Центральном и Северо-Западной регионах">
     <meta name="author" content="">
-    <title>Труба б/у – 404 | Страница не найдена</title>
+    <title>Труба б/у в Центральном и СЗ регионах</title>
+
+	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
+    <link href="css/prettyPhoto.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -22,7 +24,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
-<body>
+
+<body class="homepage">
 
   <!-- Yandex.Metrika counter -->
   <script type="text/javascript">
@@ -68,7 +71,7 @@
                   </div>
                   <div class="col-sm-6 col-xs-12 col-md-6">
                       <div class="social top-number">
-                        <p><i class="fa"></i>г. Ярославль, ул. Магистральная, д. 14</p>
+                        <p><i class="fa"></i>г. Ярославль, ул. Гагарина, д. 62</p>
                       </div>
                   </div>
               </div>
@@ -76,24 +79,46 @@
       </div><!--/.top-bar-->
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                      <li><a href="index.html">Главная</a></li>
-                      <li><a href="about.html">О компании</a></li>
-                      <li><a href="prices.html">Ассортимент</a></li>
-                      <li><a href="contact-us.html">Контакты</a></li>
+                        <li><a href="index.html">Главная</a></li>
+                        <li class="active"><a href="about.html">О компании</a></li>
+                        <li><a href="prices.html">Ассортимент</a></li>
+                        <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
                 </div>
             </div><!--/.container-->
         </nav><!--/nav-->
-      </header><!--/header-->
 
-    <section id="error" class="container text-center message_heading">
-        <h1>404, Нет такой страницы</h1>
-        <p>Не пугайтесь, ничего страшного не произошло, просто вы запросили страницу, которой у нас нет.</p>
-        <a class="btn btn-primary" href="index.html">Вернуться на главную</a>
-        <a class="btn btn-primary" href="prices.html">Посмотреть ассортимент</a>
-    </section><!--/#error-->
+    </header><!--/header-->
+
+    <section id="main-slider" class="no-margin">
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="item active" style="background-image: url(images/tubes.jpg)">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6 float-right">
+                                <div class="carousel-content">
+                                    <h1 class="animation animated-item-1">Стальные трубы Б/У</h1>
+                                    <h2 class="animation animated-item-2 normal-text">Наша компания продает, покупает и демонтирует стальные трубы Б/У любых диаметров и категорий во всем Центральном регионе, включая Ярославскую, Ивановскую, Владимирскую, Костромскую и Тверскую области.</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--/.item-->
+            </div><!--/.carousel-inner-->
+        </div><!--/.carousel-->
+    </section><!--/#main-slider-->
 
     <footer id="footer" class="midnight-blue">
         <div class="container">
