--- a/contact-us.html
+++ b/contact-us.html
@@ -83,6 +83,7 @@
             <div class="collapse navbar-collapse navbar-right">
                 <ul class="nav navbar-nav">
                   <li><a href="index.html">Главная</a></li>
+                  <li><a href="about.html">О компании</a></li>
                   <li><a href="prices.html">Ассортимент</a></li>
                   <li class="active"><a href="contact-us.html">Контакты</a></li>
                 </ul>
@@ -115,7 +116,7 @@
                               <h5>г. Ярославль, ул. Гагарина, д. 62</h5>
                               <h5>г. Ярославль, Тормозное шоссе, д. 119</h5>
                               <h3>Электронная почта</h3>
-                                <h5><a href="mailto:mail@yar-truba.ru">yartruba-76@yandex.ru</a></h5>
+                              <h5><a href="mailto:mail@yar-truba.ru">yartruba-76@yandex.ru</a></h5>
                             </li>
                         </ul>
                     </div>
@@ -169,6 +170,7 @@
                 <div class="col-sm-6">
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
+                      <li><a href="about.html">О компании</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
