--- a/prices.html
+++ b/prices.html
@@ -83,6 +83,7 @@
               <div class="collapse navbar-collapse navbar-right">
                   <ul class="nav navbar-nav">
                     <li><a href="index.html">Главная</a></li>
+                    <li><a href="about.html">О компании</a></li>
                     <li class="active"><a href="prices.html">Ассортимент</a></li>
                     <li><a href="contact-us.html">Контакты</a></li>
                   </ul>
@@ -349,6 +350,7 @@
                 <div class="col-sm-6">
                     <ul class="pull-right">
                       <li><a href="index.html">Главная</a></li>
+                      <li><a href="about.html">О компании</a></li>
                       <li><a href="prices.html">Ассортимент</a></li>
                       <li><a href="contact-us.html">Контакты</a></li>
                     </ul>
